# Artillery_Computer

./: CMakeLists.txt  README.md  TODO.md  main.cpp
Classes and Headers/: artilleryFunctions.h  informationIO.h  weatherFunctions.h
Firing Data/: m252charge2.txt
Headers/: informationDisplay.h  m252functions.h
Information/: README.txt  TODO.txt
M252Charges/: m252charge0.txt  m252charge1.txt
